[gd_scene load_steps=19 format=2]

[ext_resource path="res://testTileset.tres" type="TileSet" id=1]
[ext_resource path="res://slimeSprites/slimeWalk.png" type="Texture" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://Camera2D.gd" type="Script" id=4]
[ext_resource path="res://OpenSans-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://slimeSprites/slimeIdleJumpAndIdle.png" type="Texture" id=6]
[ext_resource path="res://slimeSprites/slimeLandEffect.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 20, 18 )

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteLandEffect:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "jump"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=9]
resource_name = "land"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 14 ]
}

[sub_resource type="Animation" id=10]
resource_name = "landEffect"
length = 0.6

[sub_resource type="Animation" id=4]
resource_name = "run"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteLandEffect:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "landEffect"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteLandEffect:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}

[node name="World" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 65520, 0, 0, 65522, 0, 0, 65524, 0, 0, 65526, 0, 0, 65528, 0, 0, 65530, 0, 0, 65532, 0, 0, 65534, 0, 0, 0, 0, 0, 2, 0, 0, 4, 0, 0, 6, 0, 0, 8, 0, 0, 10, 0, 0, 12, 1, 0, 14, 1, 0, 16, 1, 0, 18, 1, 0, 20, 1, 0, 22, 1, 0, 24, 1, 0, 26, 1, 0, 28, 1, 0, 30, 1, 0, 32, 0, 0, 34, 0, 0, 196592, 0, 0, 196594, 0, 0, 196596, 0, 0, 196598, 0, 0, 196600, 0, 0, 196602, 0, 0, 196604, 0, 0, 196606, 0, 0, 131072, 0, 0, 131074, 0, 0, 131076, 0, 0, 131078, 0, 0, 131080, 0, 0, 131082, 0, 0, 131084, 1, 0, 131086, 1, 0, 131088, 1, 0, 131090, 1, 0, 131092, 1, 0, 131094, 1, 0, 131096, 1, 0, 131098, 1, 0, 131100, 1, 0, 131102, 1, 0, 131104, 0, 0, 131106, 0, 0 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 64, -56 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, 40 )
shape = SubResource( 8 )

[node name="Button" type="Button" parent="Player"]
margin_left = -1050.0
margin_top = -846.0
margin_right = -897.0
margin_bottom = -764.0
text = "Shake"

[node name="CheckButton" type="CheckButton" parent="Player"]
margin_left = -942.0
margin_top = -717.0
margin_right = -825.0
margin_bottom = -677.0

[node name="ShakeLabel" type="RichTextLabel" parent="Player/CheckButton"]
margin_left = -107.0
margin_top = -19.0
margin_right = 42.0
margin_bottom = 53.0
custom_fonts/normal_font = SubResource( 7 )
text = "Shake"

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( -64, 8 )
current = true
smoothing_enabled = true
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="Player/Camera2D"]

[node name="Timer" type="Timer" parent="Player/Camera2D"]

[node name="Sprite" type="Sprite" parent="Player"]
position = Vector2( 0, 40 )
texture = ExtResource( 6 )
hframes = 4
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
anims/RESET = SubResource( 2 )
anims/fall = SubResource( 6 )
anims/idle = SubResource( 3 )
anims/jump = SubResource( 5 )
anims/land = SubResource( 9 )
anims/landEffect = SubResource( 10 )
anims/run = SubResource( 4 )

[node name="Timer" type="Timer" parent="Player"]
wait_time = 0.5
one_shot = true

[node name="Sprite2" type="Sprite" parent="Player"]
visible = false
position = Vector2( 0, 40 )
texture = ExtResource( 2 )
hframes = 2
vframes = 2

[node name="SpriteLandEffect" type="Sprite" parent="Player"]
visible = false
position = Vector2( 0, -8 )
texture = ExtResource( 7 )
hframes = 2
vframes = 3

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Player"]
anims/RESET = SubResource( 11 )
anims/landEffect = SubResource( 12 )

[connection signal="pressed" from="Player/Button" to="Player" method="_on_Button_pressed"]
[connection signal="toggled" from="Player/CheckButton" to="Player" method="_on_CheckButton_toggled"]
[connection signal="timeout" from="Player/Timer" to="Player" method="_on_Timer_timeout"]
